change image links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="" alt="">
       <h2>Hello.</h2>
       <p class="intro">I'm a lazy bottom feeder that set out to learn coding to make work calucaltions more accessible for myself and other technicans.</p>
-      <img class="lazyIcon" src="https://cdn-icons-png.flaticon.com/512/6213/6213414.png" alt="Lazy icons created by iconixar - Flaticon">
+      <img class="lazyIcon" src="images/lazy.png" alt="Lazy icons created by iconixar - Flaticon">
     </div>
     <hr>
     <div class="skills">
@@ -35,7 +35,7 @@
         <p>I do gas stuff in houses and try not to let things blow up or cause people naps you never wake up from 🥱😴(death from CO)😵 due to gas issues</p>
       </div>
       <div class="skill-row">
-        <img class="terminal" src="https://cdn-icons.flaticon.com/png/512/4248/premium/4248495.png?token=exp=1646024156~hmac=0026f7d139def6c022acda3e77b684b5" alt="">
+        <img class="terminal" src="images/terminal.png" alt="">
         <h3>Coding</h3>
         <p>Self learned thru udemy courses and freely available tutorials. Self learned thru udemy courses and freely available tutorials. Self learned thru udemy courses and freely available tutorials.</p>
       </div>
