image link changes

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="gasTech" src="https://cdn-icons.flaticon.com/png/512/3993/premium/3993523.png?token=exp=1646023429~hmac=b321bfba82019b267ddbe3a207b32363" alt="">
+        <img class="gasTech" src="images/3993523.png" alt="">
         <h3>Gas Technican</h3>
         <p>I do gas stuff in houses and try not to let things blow up or cause people naps you never wake up from 🥱😴(death from CO)😵 due to gas issues</p>
       </div>
       <div class="skill-row">
-        <img class="terminal" src="images/terminal.png" alt="">
+        <img class="terminal" src="images/4248495.png" alt="">
         <h3>Coding</h3>
         <p>Self learned thru udemy courses and freely available tutorials. Self learned thru udemy courses and freely available tutorials. Self learned thru udemy courses and freely available tutorials.</p>
       </div>
